# annotated-code

./: .gitignore  README.md  pyproject.toml
examples/fibonacci/: annotations.md  code.py
examples/fibonacci_highlight/code/: app.js  index.html  style.css
examples/fibonacci_viz/code/: app.js
scripts/: generate_highlight.py  generate_viz.py
src/annotated_code/: model.py
templates/template_highlight/: app.js  index.html
templates/template_viz/: app.js  index.html  style.css
