[project]
name = "annotated-code"
version = "0.1.0"
description = "A tool to visualize code explanations"
readme = "README.md"
authors = [
    { name = "tbluche", email = "teo777@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic"
]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
